# navoica-api

./: .gitignore  README.rst  pytest.ini  setup.cfg
navoica_api/: __init__.py  admin.py  apps.py  cms_urls.py  lms_urls.py  models.py  urls.py
navoica_api/ace_common/: template_context.py
navoica_api/api/: permissions.py  urls.py
navoica_api/api/tests/: test_permissions.py
navoica_api/api/v1/: urls.py  views.py
navoica_api/api/v1/branding/: urls.py  views.py
navoica_api/api/v1/course/: urls.py  views.py
navoica_api/api/v1/serializers/: career.py  certificate.py  opinion.py  user.py
navoica_api/certificates/: api.py  functions.py  signals.py  tasks.py
navoica_api/certificates/signals/: handlers.py
navoica_api/course/: __init__.py  admin.py  apps.py  fields.py  models.py  translation.py
navoica_api/course/api/: urls.py  views.py
navoica_api/course/migrations/: 0001_initial.py  0002_coursecategory_coursedifficulty.py  0003_auto_20230327_2115.py  0004_auto_20230328_1020.py  0005_auto_20230328_1020.py  0006_courseorganizer_url.py  0007_auto_20230425_0726.py
navoica_api/lms/: urls.py
navoica_api/management/commands/: check_encoded_videos.py  refresh_availability.py
navoica_api/migrations/: 0001_initial.py  0002_auto_20211011_1434.py  0003_auto_20220114_1636.py  0004_careermodel.py
navoica_api/tasks/student/: tasks.py
navoica_api/utils/: date_utils.py
navoica_api/videos/: __init__.py  storage.py  tasks.py
navoica_api/videos/commands/: check_encoded_videos.py
navoica_api/videos/signals/: handlers.py
scorm/: storage.py
(+2 files in other folders)
