[metadata]
name = navoica-api
version = 1.0.0
description = A Django app to extend openedx rest api
long_description = file: README.rst
url = https://www.navoica.pl/
author = Krystian Łygas
author_email = krystian.lygas@opi.org.pl
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11.12
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

